--- a/Proyecto/Proyecto.csproj
+++ b/Proyecto/Proyecto.csproj
@@ -125,6 +125,7 @@
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
+    <Content Include="Formularios\ProyectoMaster.Master" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="prueba\frmPrueba.aspx" />
     <Content Include="Scripts\bootstrap.js" />
@@ -191,6 +192,13 @@
     </Compile>
     <Compile Include="Formularios\frmDemo.aspx.designer.cs">
       <DependentUpon>frmDemo.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Formularios\ProyectoMaster.Master.cs">
+      <DependentUpon>ProyectoMaster.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Formularios\ProyectoMaster.Master.designer.cs">
+      <DependentUpon>ProyectoMaster.Master</DependentUpon>
     </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
