--- a/Proyecto/Proyecto.csproj
+++ b/Proyecto/Proyecto.csproj
@@ -44,12 +44,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.5.0.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="System.Data.Entity" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Drawing" />
@@ -126,7 +132,24 @@
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="Formularios\ProyectoMaster.Master" />
+    <EntityDeploy Include="Modelos\ProyectoDBEntities.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>ProyectoDBEntities.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="Modelos\ProyectoDBEntities.edmx.diagram">
+      <DependentUpon>ProyectoDBEntities.edmx</DependentUpon>
+    </Content>
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
+    <Content Include="Modelos\ProyectoDBEntities.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>ProyectoDBEntities.Context.cs</LastGenOutput>
+      <DependentUpon>ProyectoDBEntities.edmx</DependentUpon>
+    </Content>
+    <Content Include="Modelos\ProyectoDBEntities.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>ProyectoDBEntities.edmx</DependentUpon>
+      <LastGenOutput>ProyectoDBEntities.cs</LastGenOutput>
+    </Content>
     <Content Include="prueba\frmPrueba.aspx" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -203,6 +226,63 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Modelos\Campeonato.cs">
+      <DependentUpon>ProyectoDBEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Modelos\Cantone.cs">
+      <DependentUpon>ProyectoDBEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Modelos\Distrito.cs">
+      <DependentUpon>ProyectoDBEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Modelos\Equipos.cs">
+      <DependentUpon>ProyectoDBEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Modelos\Equipos_x_Campeonato.cs">
+      <DependentUpon>ProyectoDBEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Modelos\Evento.cs">
+      <DependentUpon>ProyectoDBEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Modelos\Eventos_x_Partido.cs">
+      <DependentUpon>ProyectoDBEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Modelos\Jugadore.cs">
+      <DependentUpon>ProyectoDBEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Modelos\Partido.cs">
+      <DependentUpon>ProyectoDBEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Modelos\Persona.cs">
+      <DependentUpon>ProyectoDBEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Modelos\Posicione.cs">
+      <DependentUpon>ProyectoDBEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Modelos\Provincia.cs">
+      <DependentUpon>ProyectoDBEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Modelos\ProyectoDBEntities.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ProyectoDBEntities.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Modelos\ProyectoDBEntities.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ProyectoDBEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Modelos\ProyectoDBEntities.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ProyectoDBEntities.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Modelos\sysdiagram.cs">
+      <DependentUpon>ProyectoDBEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Modelos\Usuario.cs">
+      <DependentUpon>ProyectoDBEntities.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="prueba\frmPrueba.aspx.cs">
       <DependentUpon>frmPrueba.aspx</DependentUpon>
@@ -246,6 +326,9 @@
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
