--- a/Proyecto/Proyecto.csproj
+++ b/Proyecto/Proyecto.csproj
@@ -139,6 +139,7 @@
     <Content Include="Modelos\ProyectoDBEntities.edmx.diagram">
       <DependentUpon>ProyectoDBEntities.edmx</DependentUpon>
     </Content>
+    <Content Include="libman.json" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Modelos\ProyectoDBEntities.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
@@ -158,6 +159,54 @@
     <Content Include="Scripts\jquery-3.3.1.slim.js" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="StartBootstrap\css\stylish-portfolio.css" />
+    <Content Include="StartBootstrap\css\stylish-portfolio.min.css" />
+    <Content Include="StartBootstrap\gulpfile.js" />
+    <Content Include="StartBootstrap\img\bg-callout.jpg" />
+    <Content Include="StartBootstrap\img\bg-masthead.jpg" />
+    <Content Include="StartBootstrap\img\portfolio-1.jpg" />
+    <Content Include="StartBootstrap\img\portfolio-2.jpg" />
+    <Content Include="StartBootstrap\img\portfolio-3.jpg" />
+    <Content Include="StartBootstrap\img\portfolio-4.jpg" />
+    <Content Include="StartBootstrap\index.html" />
+    <Content Include="StartBootstrap\js\stylish-portfolio.js" />
+    <Content Include="StartBootstrap\js\stylish-portfolio.min.js" />
+    <Content Include="StartBootstrap\vendor\bootstrap\css\bootstrap-grid.css" />
+    <Content Include="StartBootstrap\vendor\bootstrap\css\bootstrap-grid.min.css" />
+    <Content Include="StartBootstrap\vendor\bootstrap\css\bootstrap-reboot.css" />
+    <Content Include="StartBootstrap\vendor\bootstrap\css\bootstrap-reboot.min.css" />
+    <Content Include="StartBootstrap\vendor\bootstrap\css\bootstrap.css" />
+    <Content Include="StartBootstrap\vendor\bootstrap\css\bootstrap.min.css" />
+    <Content Include="StartBootstrap\vendor\bootstrap\js\bootstrap.bundle.js" />
+    <Content Include="StartBootstrap\vendor\bootstrap\js\bootstrap.bundle.min.js" />
+    <Content Include="StartBootstrap\vendor\bootstrap\js\bootstrap.js" />
+    <Content Include="StartBootstrap\vendor\bootstrap\js\bootstrap.min.js" />
+    <Content Include="StartBootstrap\vendor\fontawesome-free\css\all.css" />
+    <Content Include="StartBootstrap\vendor\fontawesome-free\css\all.min.css" />
+    <Content Include="StartBootstrap\vendor\fontawesome-free\css\brands.css" />
+    <Content Include="StartBootstrap\vendor\fontawesome-free\css\brands.min.css" />
+    <Content Include="StartBootstrap\vendor\fontawesome-free\css\fontawesome.css" />
+    <Content Include="StartBootstrap\vendor\fontawesome-free\css\fontawesome.min.css" />
+    <Content Include="StartBootstrap\vendor\fontawesome-free\css\regular.css" />
+    <Content Include="StartBootstrap\vendor\fontawesome-free\css\regular.min.css" />
+    <Content Include="StartBootstrap\vendor\fontawesome-free\css\solid.css" />
+    <Content Include="StartBootstrap\vendor\fontawesome-free\css\solid.min.css" />
+    <Content Include="StartBootstrap\vendor\fontawesome-free\css\svg-with-js.css" />
+    <Content Include="StartBootstrap\vendor\fontawesome-free\css\svg-with-js.min.css" />
+    <Content Include="StartBootstrap\vendor\fontawesome-free\css\v4-shims.css" />
+    <Content Include="StartBootstrap\vendor\fontawesome-free\css\v4-shims.min.css" />
+    <Content Include="StartBootstrap\vendor\fontawesome-free\webfonts\fa-brands-400.svg" />
+    <Content Include="StartBootstrap\vendor\fontawesome-free\webfonts\fa-regular-400.svg" />
+    <Content Include="StartBootstrap\vendor\fontawesome-free\webfonts\fa-solid-900.svg" />
+    <Content Include="StartBootstrap\vendor\jquery-easing\jquery.easing.compatibility.js" />
+    <Content Include="StartBootstrap\vendor\jquery-easing\jquery.easing.js" />
+    <Content Include="StartBootstrap\vendor\jquery-easing\jquery.easing.min.js" />
+    <Content Include="StartBootstrap\vendor\jquery\jquery.js" />
+    <Content Include="StartBootstrap\vendor\jquery\jquery.min.js" />
+    <Content Include="StartBootstrap\vendor\jquery\jquery.slim.js" />
+    <Content Include="StartBootstrap\vendor\jquery\jquery.slim.min.js" />
+    <Content Include="StartBootstrap\vendor\simple-line-icons\css\simple-line-icons.css" />
+    <Content Include="StartBootstrap\vendor\simple-line-icons\fonts\Simple-Line-Icons.svg" />
     <Content Include="Scripts\WebForms\DetailsView.js" />
     <Content Include="Scripts\WebForms\Focus.js" />
     <Content Include="Scripts\WebForms\GridView.js" />
@@ -320,6 +369,52 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
+    <Content Include="StartBootstrap\.browserslistrc" />
+    <Content Include="StartBootstrap\.gitignore" />
+    <Content Include="StartBootstrap\.travis.yml" />
+    <Content Include="StartBootstrap\LICENSE" />
+    <Content Include="StartBootstrap\package-lock.json" />
+    <Content Include="StartBootstrap\package.json" />
+    <Content Include="StartBootstrap\README.md" />
+    <Content Include="StartBootstrap\scss\stylish-portfolio.scss" />
+    <Content Include="StartBootstrap\scss\_bootstrap-overrides.scss" />
+    <Content Include="StartBootstrap\scss\_callout.scss" />
+    <Content Include="StartBootstrap\scss\_footer.scss" />
+    <Content Include="StartBootstrap\scss\_global.scss" />
+    <Content Include="StartBootstrap\scss\_masthead.scss" />
+    <Content Include="StartBootstrap\scss\_mixins.scss" />
+    <Content Include="StartBootstrap\scss\_portfolio.scss" />
+    <Content Include="StartBootstrap\scss\_services.scss" />
+    <Content Include="StartBootstrap\scss\_sidebar.scss" />
+    <Content Include="StartBootstrap\scss\_variables.scss" />
+    <Content Include="StartBootstrap\vendor\bootstrap\css\bootstrap-grid.css.map" />
+    <Content Include="StartBootstrap\vendor\bootstrap\css\bootstrap-grid.min.css.map" />
+    <Content Include="StartBootstrap\vendor\bootstrap\css\bootstrap-reboot.css.map" />
+    <Content Include="StartBootstrap\vendor\bootstrap\css\bootstrap-reboot.min.css.map" />
+    <Content Include="StartBootstrap\vendor\bootstrap\css\bootstrap.css.map" />
+    <Content Include="StartBootstrap\vendor\bootstrap\css\bootstrap.min.css.map" />
+    <Content Include="StartBootstrap\vendor\bootstrap\js\bootstrap.bundle.js.map" />
+    <Content Include="StartBootstrap\vendor\bootstrap\js\bootstrap.bundle.min.js.map" />
+    <Content Include="StartBootstrap\vendor\bootstrap\js\bootstrap.js.map" />
+    <Content Include="StartBootstrap\vendor\bootstrap\js\bootstrap.min.js.map" />
+    <Content Include="StartBootstrap\vendor\fontawesome-free\webfonts\fa-brands-400.eot" />
+    <Content Include="StartBootstrap\vendor\fontawesome-free\webfonts\fa-brands-400.ttf" />
+    <Content Include="StartBootstrap\vendor\fontawesome-free\webfonts\fa-brands-400.woff" />
+    <Content Include="StartBootstrap\vendor\fontawesome-free\webfonts\fa-brands-400.woff2" />
+    <Content Include="StartBootstrap\vendor\fontawesome-free\webfonts\fa-regular-400.eot" />
+    <Content Include="StartBootstrap\vendor\fontawesome-free\webfonts\fa-regular-400.ttf" />
+    <Content Include="StartBootstrap\vendor\fontawesome-free\webfonts\fa-regular-400.woff" />
+    <Content Include="StartBootstrap\vendor\fontawesome-free\webfonts\fa-regular-400.woff2" />
+    <Content Include="StartBootstrap\vendor\fontawesome-free\webfonts\fa-solid-900.eot" />
+    <Content Include="StartBootstrap\vendor\fontawesome-free\webfonts\fa-solid-900.ttf" />
+    <Content Include="StartBootstrap\vendor\fontawesome-free\webfonts\fa-solid-900.woff" />
+    <Content Include="StartBootstrap\vendor\fontawesome-free\webfonts\fa-solid-900.woff2" />
+    <Content Include="StartBootstrap\vendor\jquery\jquery.min.map" />
+    <Content Include="StartBootstrap\vendor\jquery\jquery.slim.min.map" />
+    <Content Include="StartBootstrap\vendor\simple-line-icons\fonts\Simple-Line-Icons.eot" />
+    <Content Include="StartBootstrap\vendor\simple-line-icons\fonts\Simple-Line-Icons.ttf" />
+    <Content Include="StartBootstrap\vendor\simple-line-icons\fonts\Simple-Line-Icons.woff" />
+    <Content Include="StartBootstrap\vendor\simple-line-icons\fonts\Simple-Line-Icons.woff2" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
