--- a/Proyecto/Web.config
+++ b/Proyecto/Web.config
@@ -43,8 +43,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="progra5Entities" connectionString="metadata=res://*/Modelos.ProyectoDBEntities.csdl|res://*/Modelos.ProyectoDBEntities.ssdl|res://*/Modelos.ProyectoDBEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=den1.mssql8.gear.host;initial catalog=progra5;persist security info=True;user id=progra5;password=Aq5GN0r?5B5-;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  <add name="ProyectoBD" connectionString="metadata=res://*/Modelos.ProyectoBD.csdl|res://*/Modelos.ProyectoBD.ssdl|res://*/Modelos.ProyectoBD.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=den1.mssql8.gear.host;initial catalog=progra5;persist security info=True;user id=progra5;password=Aq5GN0r?5B5-;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
