--- a/Proyecto/Proyecto.csproj
+++ b/Proyecto/Proyecto.csproj
@@ -120,13 +120,16 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Imagenes\ST_Icon.png" />
     <Content Include="Content\Site.css" />
     <Content Include="Default.aspx" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Formularios\frmEliminarPersona.aspx" />
     <Content Include="Formularios\frmEliminarUsuario.aspx" />
+    <Content Include="Formularios\frmIngresarEquipo.aspx" />
     <Content Include="Formularios\frmIngresarUsuario.aspx" />
+    <Content Include="Formularios\frmListaEquipos.aspx" />
     <Content Include="Formularios\frmListaPersonas.aspx" />
     <Content Include="Formularios\frmListaUsuarios.aspx" />
     <Content Include="Formularios\frmModificarPersona.aspx" />
@@ -286,12 +289,26 @@
     <Compile Include="Formularios\frmEliminarUsuario.aspx.designer.cs">
       <DependentUpon>frmEliminarUsuario.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Formularios\frmIngresarEquipo.aspx.cs">
+      <DependentUpon>frmIngresarEquipo.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Formularios\frmIngresarEquipo.aspx.designer.cs">
+      <DependentUpon>frmIngresarEquipo.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Formularios\frmIngresarUsuario.aspx.cs">
       <DependentUpon>frmIngresarUsuario.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Formularios\frmIngresarUsuario.aspx.designer.cs">
       <DependentUpon>frmIngresarUsuario.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Formularios\frmListaEquipos.aspx.cs">
+      <DependentUpon>frmListaEquipos.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Formularios\frmListaEquipos.aspx.designer.cs">
+      <DependentUpon>frmListaEquipos.aspx</DependentUpon>
     </Compile>
     <Compile Include="Formularios\frmListaPersonas.aspx.cs">
       <DependentUpon>frmListaPersonas.aspx</DependentUpon>
