--- a/Proyecto/Proyecto.csproj
+++ b/Proyecto/Proyecto.csproj
@@ -126,14 +126,18 @@
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Formularios\frmEliminarEquipo.aspx" />
+    <Content Include="Formularios\frmEliminarJugador.aspx" />
     <Content Include="Formularios\frmEliminarPersona.aspx" />
     <Content Include="Formularios\frmEliminarUsuario.aspx" />
     <Content Include="Formularios\frmIngresarEquipo.aspx" />
+    <Content Include="Formularios\frmIngresarJugador.aspx" />
     <Content Include="Formularios\frmIngresarUsuario.aspx" />
     <Content Include="Formularios\frmListaEquipos.aspx" />
+    <Content Include="Formularios\frmListaJugadores.aspx" />
     <Content Include="Formularios\frmListaPersonas.aspx" />
     <Content Include="Formularios\frmListaUsuarios.aspx" />
     <Content Include="Formularios\frmModificarEquipo.aspx" />
+    <Content Include="Formularios\frmModificarJugador.aspx" />
     <Content Include="Formularios\frmModificarPersona.aspx" />
     <Content Include="Formularios\frmIngresarPersona.aspx" />
     <Content Include="Formularios\frmLogin.aspx" />
@@ -284,6 +288,13 @@
     <Compile Include="Formularios\frmEliminarEquipo.aspx.designer.cs">
       <DependentUpon>frmEliminarEquipo.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Formularios\frmEliminarJugador.aspx.cs">
+      <DependentUpon>frmEliminarJugador.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Formularios\frmEliminarJugador.aspx.designer.cs">
+      <DependentUpon>frmEliminarJugador.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Formularios\frmEliminarPersona.aspx.cs">
       <DependentUpon>frmEliminarPersona.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -305,6 +316,13 @@
     <Compile Include="Formularios\frmIngresarEquipo.aspx.designer.cs">
       <DependentUpon>frmIngresarEquipo.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Formularios\frmIngresarJugador.aspx.cs">
+      <DependentUpon>frmIngresarJugador.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Formularios\frmIngresarJugador.aspx.designer.cs">
+      <DependentUpon>frmIngresarJugador.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Formularios\frmIngresarUsuario.aspx.cs">
       <DependentUpon>frmIngresarUsuario.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -318,6 +336,13 @@
     </Compile>
     <Compile Include="Formularios\frmListaEquipos.aspx.designer.cs">
       <DependentUpon>frmListaEquipos.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Formularios\frmListaJugadores.aspx.cs">
+      <DependentUpon>frmListaJugadores.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Formularios\frmListaJugadores.aspx.designer.cs">
+      <DependentUpon>frmListaJugadores.aspx</DependentUpon>
     </Compile>
     <Compile Include="Formularios\frmListaPersonas.aspx.cs">
       <DependentUpon>frmListaPersonas.aspx</DependentUpon>
@@ -339,6 +364,13 @@
     </Compile>
     <Compile Include="Formularios\frmModificarEquipo.aspx.designer.cs">
       <DependentUpon>frmModificarEquipo.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Formularios\frmModificarJugador.aspx.cs">
+      <DependentUpon>frmModificarJugador.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Formularios\frmModificarJugador.aspx.designer.cs">
+      <DependentUpon>frmModificarJugador.aspx</DependentUpon>
     </Compile>
     <Compile Include="Formularios\frmModificarPersona.aspx.cs">
       <DependentUpon>frmModificarPersona.aspx</DependentUpon>
