Cambio en modelo de DB

--- a/Proyecto/Proyecto.csproj
+++ b/Proyecto/Proyecto.csproj
@@ -131,6 +131,7 @@
     <Content Include="Formularios\frmEliminarPersona.aspx" />
     <Content Include="Formularios\frmEliminarUsuario.aspx" />
     <Content Include="Formularios\frmIngresarEquipo.aspx" />
+    <Content Include="Formularios\frmIngresarEquiposTorneo.aspx" />
     <Content Include="Formularios\frmIngresarJugador.aspx" />
     <Content Include="Formularios\frmIngresarUsuario.aspx" />
     <Content Include="Formularios\frmListaEquipos.aspx" />
@@ -324,6 +325,13 @@
     </Compile>
     <Compile Include="Formularios\frmIngresarEquipo.aspx.designer.cs">
       <DependentUpon>frmIngresarEquipo.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Formularios\frmIngresarEquiposTorneo.aspx.cs">
+      <DependentUpon>frmIngresarEquiposTorneo.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Formularios\frmIngresarEquiposTorneo.aspx.designer.cs">
+      <DependentUpon>frmIngresarEquiposTorneo.aspx</DependentUpon>
     </Compile>
     <Compile Include="Formularios\frmIngresarJugador.aspx.cs">
       <DependentUpon>frmIngresarJugador.aspx</DependentUpon>
